--- a/app/Views/templates/base.twig
+++ b/app/Views/templates/base.twig
@@ -35,6 +35,7 @@
     <script src="/js/click-trigger-event.js" defer></script>
     <script src="/js/modal-eliminar.js" defer></script>
     <script src="/js/cover-background.js" defer></script>
+    <script src="/js/setup.js" defer></script>
 </head>
 <body>
     {% include 'templates/navbar.twig' %}
