--- a/app/Views/products/modifyproduct.twig
+++ b/app/Views/products/modifyproduct.twig
@@ -62,6 +62,10 @@
                                             <span class="help-block">Debe ser entre 1 y 29 caracteres.</span>
                                         {% endif %}
                                     </div>
+                                    <div class="form-group has-feedback has-clear">
+                                        <label for="detallesProducto">Detalles</label>
+                                        <input type="text" name="detallesProducto" value="{{ input.detallesProducto }}" class="form-control" id="detallesProducto">
+                                    </div>
                                     <div class="form-group">
                                         <label for="stockMinProducto">Stock Mínimo</label>
                                         <input type="number" name="stockMinProducto" value="{{ input.stockMinProducto ?? 1 }}" class="form-control" id="stockMinProducto" min="0">
