Agrega doble facturación de un mismo producto

--- a/app/Views/invoices/nuevafactura.twig
+++ b/app/Views/invoices/nuevafactura.twig
@@ -254,6 +254,7 @@
                 data-event="factura-eliminar-detalle"
                 data-toggle="tooltip"
                 data-detalleid="{{id}}"
+                data-index="{{index}}"
                 title="Limpiar Este Detalle">
                 <span class="glyphicon glyphicon-trash"></span>
             </td>
