cambiar titulo tabla productos

--- a/app/Views/products/products.twig
+++ b/app/Views/products/products.twig
@@ -84,7 +84,7 @@
                                     <th><a href="#" class="link-submit" data-input="orderby" data-value="NombreMarca">Marca{% if input.orderby == 'NombreMarca' %}▼{% endif %}</a></th>
                                     <th><a href="#" class="link-submit" data-input="orderby" data-value="Descripcion">Nombre{% if input.orderby == 'Descripcion' %}▼{% endif %}</a></th>
                                     <th>Cantidad</th>
-                                    <th>Precio de Venta</th>
+                                    <th>P/Venta</th>
                                 </tr>
                             </thead>
 
