Estilo textarea solo vertical

--- a/app/Views/products/modifyproduct.twig
+++ b/app/Views/products/modifyproduct.twig
@@ -64,7 +64,7 @@
                                     </div>
                                     <div class="form-group has-feedback has-clear">
                                         <label for="detallesProducto">Detalles</label>
-                                        <textarea rows="3" name="detallesProducto" class="form-control" id="detallesProducto">{{ input.detallesProducto }}</textarea>
+                                        <textarea rows="3" name="detallesProducto" class="form-control" id="detallesProducto" style="resize: vertical">{{ input.detallesProducto }}</textarea>
                                     </div>
                                     <div class="form-group">
                                         <label for="stockMinProducto">Stock Mínimo</label>
