--- a/app/Views/templates/base.twig
+++ b/app/Views/templates/base.twig
@@ -36,6 +36,7 @@
     <script src="/js/modal-eliminar.js" defer></script>
     <script src="/js/cover-background.js" defer></script>
     <script src="/js/setup.js" defer></script>
+    <script src="/js/vue.min.js" defer></script>
 </head>
 <body>
     {% include 'templates/navbar.twig' %}
