--- a/app/Views/products/modifyproduct.twig
+++ b/app/Views/products/modifyproduct.twig
@@ -70,11 +70,6 @@
                                         <label for="stockMinProducto">Stock Mínimo</label>
                                         <input type="number" name="stockMinProducto" value="{{ input.stockMinProducto ?? 1 }}" class="form-control" id="stockMinProducto" min="0">
                                     </div>
-                                    <div class="checkbox">
-                                        <label>
-                                            <input type="checkbox" name="excentoIvaProducto" value="1" {% if input.excentoIvaProducto  %}checked{% endif %}> Exento IVA?
-                                        </label>
-                                    </div>
                                 </div>
                                 <div class="col-sm-6">
                                     <div class="form-group has-feedback has-clear {% if failedInputs.marcaProducto %}has-error{% endif %}">
@@ -119,11 +114,12 @@
                                             {% endfor %}
                                         </select>
                                     </div>
-                                    <div class="checkbox">
-                                        <label>
-                                            <input type="checkbox" name="productoActivo" value="1" {% if input.productoActivo  %}checked{% endif %}> Producto Activo
-                                        </label>
-                                    </div>
+                                    <label class="checkbox-inline">
+                                        <input type="checkbox" name="productoActivo" value="1" {% if input.productoActivo  %}checked{% endif %}> Producto Activo
+                                    </label>
+                                    <label class="checkbox-inline">
+                                        <input type="checkbox" name="excentoIvaProducto" value="1" {% if input.excentoIvaProducto  %}checked{% endif %}> Exento IVA?
+                                    </label>
                                 </div>
                             </div>
                             <hr>
@@ -145,15 +141,6 @@
                                                 <span class="glyphicon glyphicon-usd"></span>
                                             </span>
                                             <input type="number" value="{{ ((input.utilidadProducto ?? 0 ) * (1 + porcentajeIVA / 100))|number_format(4) }}" class="form-control" id="utilidadProductoConIVA" min="0" step="any">
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="utilidadProducto">Ganancia (SIN IVA)</label>
-                                        <div class="input-group">
-                                            <span class="input-group-addon">
-                                                <span class="glyphicon glyphicon-usd"></span>
-                                            </span>
-                                            <input type="number" name="utilidadProducto" value="{{ (input.utilidadProducto ?? 0)|number_format(4) }}" class="form-control" id="utilidadProducto" min="0" step="any">
                                         </div>
                                     </div>
                                 </div>
