--- a/app/Views/products/products.twig
+++ b/app/Views/products/products.twig
@@ -86,6 +86,7 @@
                                     <th>Cantidad</th>
                                     <th>P/Venta</th>
                                     <th>Costo</th>
+                                    <th>Imagen</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -103,7 +104,12 @@
                                         $ {{ ((product.CostoActual + product.Utilidad) * (1 + porcentajeIVA / 100))|number_format(2) }}
                                     {% endif %}
                                     </a></td>
-                                    <td><a class="popovers" href="#" tabindex="0" role="button" data-placement="left" data-toggle="popover" data-trigger="hover" title="Costo (IVA Incluido)" data-content="$ {{ (product.CostoActual * (1 + porcentajeIVA / 100))|number_format(4) }}">Ver</a></td>
+                                    <td><a class="popovers" href="#" tabindex="0" role="button" data-placement="left" data-toggle="popover" data-trigger="hover" title="Costo (IVA Incluido)" data-content="$ {{ (product.CostoActual * (1 + porcentajeIVA / 100))|number_format(4) }}">
+                                        <span class="glyphicon glyphicon-eye-open"></span>
+                                    </a></td>
+                                    <td><a class="popovers" href="#" tabindex="0" role="button" data-placement="left" data-toggle="popover" data-trigger="hover" title="Imagen" data-html="true" data-content="<img style='max-height: 70vh; max-width: 100%' src='/img/products/{{ product.ProductoID }}.jpg'>">
+                                        <img src="/img/products/{{ product.ProductoID }}.jpg" height="20" width="20">
+                                    </a></td>
                                 </tr>
                             {% else %}
                             </tbody>
