--- a/app/Views/products/modifyproduct.twig
+++ b/app/Views/products/modifyproduct.twig
@@ -149,6 +149,15 @@
                                             <input type="number" value="{{ ((input.utilidadProducto ?? 0 ) * (1 + porcentajeIVA / 100))|number_format(4) }}" class="form-control" id="utilidadProductoConIVA" min="0" step="any">
                                         </div>
                                     </div>
+                                    <div class="form-group hidden"> 
+                                        <label for="utilidadProducto">Ganancia (SIN IVA)</label> 
+                                        <div class="input-group"> 
+                                            <span class="input-group-addon"> 
+                                                <span class="glyphicon glyphicon-usd"></span> 
+                                            </span> 
+                                            <input type="number" name="utilidadProducto" value="{{ (input.utilidadProducto ?? 0)|number_format(4) }}" class="form-control" id="utilidadProducto" min="0" step="any"> 
+                                        </div> 
+                                    </div> 
                                 </div>
                                 <div class="col-sm-6">
                                     <div class="form-group">
