--- a/app/Views/templates/base.twig
+++ b/app/Views/templates/base.twig
@@ -37,6 +37,7 @@
     <script src="/js/cover-background.js" defer></script>
     <script src="/js/setup.js" defer></script>
     <script src="/js/vue.min.js" defer></script>
+    <script src="/js/enviar-ajuste-producto.js" defer></script>
 </head>
 <body>
     {% include 'templates/navbar.twig' %}
