Cambia el tamaño del campo de ajuste

--- a/app/Views/products/products.twig
+++ b/app/Views/products/products.twig
@@ -131,7 +131,7 @@
                                     </td>
                                     {% if is_admin %}
                                     <td>
-                                        <input type="number" data-producto="{{ product.ProductoID }}" class="productos-ajustes-inputs" value="0">
+                                        <input type="number" data-producto="{{ product.ProductoID }}" class="productos-ajustes-inputs" value="0" style="width: 70px">
                                     </td>
                                     {% endif %}
                                 </tr>
