--- a/app/Views/reports/reports.twig
+++ b/app/Views/reports/reports.twig
@@ -44,10 +44,41 @@
                             <div class="form-group">
                                 <label for="category">Categoría</label>
                                 <select name="category" id="category" class="form-control">
+                                    <option value="%">Todas</option>
                                     {% for category in categories %}
                                         <option value="{{ category.CategoriaProductoID }}">{{ category.Nombre }}</option>
                                     {% endfor %}
                                 </select>
+                            </div>
+                            <div class="form-group">
+                                <label for="brand">Marca</label>
+                                <select name="brand" id="brand" class="form-control">
+                                    <option value="%">Todas</option>
+                                    {% for brand in brands %}
+                                        <option value="{{ brand.MarcaID }}">{{ brand.Nombre }}</option>
+                                    {% endfor %}
+                                </select>
+                            </div>
+                            <label>Campos a mostrar</label>
+                            <div class="checkbox">
+                                <label>
+                                    <input type="checkbox" name="columns[]" value="barra" checked> Código de Barra
+                                </label>
+                            </div>
+                            <div class="checkbox">
+                                <label>
+                                    <input type="checkbox" name="columns[]" value="costo" checked> Costo del producto
+                                </label>
+                            </div>
+                            <div class="checkbox">
+                                <label>
+                                    <input type="checkbox" name="columns[]" value="venta" checked> Precio de venta
+                                </label>
+                            </div>
+                            <div class="checkbox">
+                                <label>
+                                    <input type="checkbox" name="columns[]" value="diferencia" checked> Diferencia costo / precio de venta
+                                </label>
                             </div>
                             <div class="form-group">
                                 <label for="orderby">Ordenar Por</label>
