--- a/app/Views/products/modifyproduct.twig
+++ b/app/Views/products/modifyproduct.twig
@@ -144,13 +144,28 @@
                                             <input type="number" value="{{ input.valorCostoActualTotal }}" class="form-control" id="valorCostoActualTotalNoIva" step="any" readonly>
                                         </div>
                                     </div>
-                                    <div class="form-group">
-                                        <label for="utilidadProductoConIVA">Ganancia (IVA INCLUIDO)</label>
-                                        <div class="input-group">
-                                            <span class="input-group-addon">
-                                                <span class="glyphicon glyphicon-usd"></span>
-                                            </span>
-                                            <input type="number" value="{{ ((input.utilidadProducto ?? 0 ) * (1 + porcentajeIVA / 100))|number_format(4) }}" class="form-control" id="utilidadProductoConIVA" min="0" step="any">
+                                    <div class="container-fluid" style="padding: 0">
+                                        <div class="row">
+                                            <div class="col-sm-6">
+                                                <div class="form-group">
+                                                    <label for="utilidadProductoConIVA">Ganancia (IVA INCLUIDO)</label>
+                                                    <div class="input-group">
+                                                        <span class="input-group-addon">
+                                                            <span class="glyphicon glyphicon-usd"></span>
+                                                        </span>
+                                                        <input type="number" value="{{ ((input.utilidadProducto ?? 0 ) * (1 + porcentajeIVA / 100))|number_format(4) }}" class="form-control" id="utilidadProductoConIVA" min="0" step="any">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-sm-6">
+                                                <div class="form-group">
+                                                    <label for="porcentajeGanancia">Porcentaje de Ganancia</label>
+                                                    <div class="input-group">
+                                                        <input type="number" value="{{ (((((input.utilidadProducto ?? 0 + input.valorCostoActualTotal ?? 0) * (1 + porcentajeIVA / 100)) / (input.valorCostoActualTotal * (1 + porcentajeIVA / 100))) - 1) * 100)|number_format(2) }}" class="form-control" id="porcentajeGanancia" min="0" step="any">
+                                                        <span class="input-group-addon" style="font-weight: bold">%</span>
+                                                    </div>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="form-group hidden"> 
