fix modify product template error when division by 0

--- a/app/Views/products/modifyproduct.twig
+++ b/app/Views/products/modifyproduct.twig
@@ -161,7 +161,7 @@
                                                 <div class="form-group">
                                                     <label for="porcentajeGanancia">Porcentaje de Ganancia</label>
                                                     <div class="input-group">
-                                                        <input type="number" value="{{ (((((input.utilidadProducto ?? 0 + input.valorCostoActualTotal ?? 0) * (1 + porcentajeIVA / 100)) / (input.valorCostoActualTotal * (1 + porcentajeIVA / 100))) - 1) * 100)|number_format(2) }}" class="form-control" id="porcentajeGanancia" min="0" step="any">
+                                                        <input type="number" value="" class="form-control" id="porcentajeGanancia" min="0" step="any">
                                                         <span class="input-group-addon" style="font-weight: bold">%</span>
                                                     </div>
                                                 </div>
