Asignar una factura a un Empleado

--- a/app/Views/invoices/facturas.twig
+++ b/app/Views/invoices/facturas.twig
@@ -73,6 +73,7 @@
                                 <th>Tiraje</th>
                                 <th>Código</th>
                                 <th>Cliente</th>
+                                <th>Empleado</th>
                                 <th>Venta Total</th>
                             </tr>
                             </thead>
@@ -83,6 +84,7 @@
                                 <td>{{ invoice.codigoTiraje }}</td>
                                 <td>{{ invoice.correlativo }}</td>
                                 <td>{{ invoice.nombreCliente }} {{ invoice.apellidoCliente }}</td>
+                                <td>{{ invoice.codigoEmpleado }}</td>
                                 <td>$ {{ invoice.ventaTotal|number_format(2) }}</td>
                             </tr>
                             {% endfor %}
