--- a/app/Views/invoices/creditofiscal.twig
+++ b/app/Views/invoices/creditofiscal.twig
@@ -68,6 +68,7 @@
                                 <th>Tiraje</th>
                                 <th>Código</th>
                                 <th>Cliente</th>
+                                <th>Empleado</th>
                                 <th>Venta Total</th>
                             </tr>
                             </thead>
@@ -78,6 +79,7 @@
                                 <td>{{ invoice.codigoTiraje }}</td>
                                 <td>{{ invoice.correlativo }}</td>
                                 <td>{{ invoice.nombreEmpresa }}</td>
+                                <td>{{ invoice.codigoEmpleado }}</td>
                                 <td>$ {{ invoice.ventaTotal|number_format(2) }}</td>
                             </tr>
                             {% endfor %}
