--- a/app/Views/reports/reports.twig
+++ b/app/Views/reports/reports.twig
@@ -16,8 +16,14 @@
                     <div class="panel-heading">
                         <h4 class="panel-title">Generar .PRN Para Sistema DET</h4>
                     </div>
-                    <div class="panel-body">
-                        <a href="/reportes/det" target="_blank" class="btn btn-block btn-info">Generar Reporte DET</a>
+                    <div class="panel-body" method="get" target="_blank">
+                        <form action="/reportes/det">
+                            <div class="form-group">
+                                <label for="year">Año a mostrar en el reporte</label>
+                                <input type="text" name="year" class="form-control" id="year" maxlength="4" required>
+                            </div>
+                            <button type="submit" class="btn btn-block btn-info">Generar Reporte DET</button>
+                        </form>
                     </div>
                 </div>
             </div>
